--- a/archive__dead-projects/index.mdx
+++ b/archive__dead-projects/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/archive__dead-projects"
 date:  "2021-06-22"
 title: "archive__dead-projects"
-icon:  "vue"
+icon:  "github"
 ---
 
 # archive__dead-projects
