--- a/deploy__LABS/index.mdx
+++ b/deploy__LABS/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/deploy__LABS"
 date:  "2021-06-16"
 title: "deploy__LABS"
-icon:  "shell"
+icon:  "github actions"
 ---
 
 # Deploying Process
