--- a/deploy__STAGING/index.mdx
+++ b/deploy__STAGING/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/deploy__STAGING"
 date:  "2021-04-07"
 title: "deploy__STAGING"
-icon:  "shell"
+icon:  "github actions"
 ---
 
 [![(LIVE) WP01 RELEASE](https://github.com/IORoot/deploy__STAGING/actions/workflows/pushto_webproduction01.yml/badge.svg?branch=master)](https://github.com/IORoot/deploy__STAGING/actions/workflows/pushto_webproduction01.yml)
