--- a/examples__google-my-business/index.mdx
+++ b/examples__google-my-business/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/examples__google-my-business"
 date:  "2021-09-28"
 title: "examples__google-my-business"
-icon:  "php"
+icon:  "google my business"
 ---
 
 # Google My Business - Example PHP 
