--- a/github__actions--WP-workflow-example/index.mdx
+++ b/github__actions--WP-workflow-example/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/github__actions--WP-workflow-example"
 date:  "2020-11-30"
 title: "github__actions--WP-workflow-example"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # WP-Github-Action-Workflow
