--- a/github__pages--Lighthouse-Results/index.mdx
+++ b/github__pages--Lighthouse-Results/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/github__pages--Lighthouse-Results"
 date:  "2021-04-26"
 title: "github__pages--Lighthouse-Results"
-icon:  "html"
+icon:  "lighthouse"
 ---
 
 404: Not Found
