--- a/macos__colorpicker--app/index.mdx
+++ b/macos__colorpicker--app/index.mdx
@@ -2,6 +2,6 @@
 slug:  "/projects/macos__colorpicker--app"
 date:  "2021-10-28"
 title: "macos__colorpicker--app"
-icon:  "rich"
+icon:  "apple"
 ---
 
