--- a/macos__json2clr--convert/index.mdx
+++ b/macos__json2clr--convert/index.mdx
@@ -2,6 +2,6 @@
 slug:  "/projects/macos__json2clr--convert"
 date:  "2022-06-23"
 title: "macos__json2clr--convert"
-icon:  "rich"
+icon:  "macos"
 ---
 
