--- a/pagespeed__lighthouse-viewer/index.mdx
+++ b/pagespeed__lighthouse-viewer/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/pagespeed__lighthouse-viewer"
 date:  "2019-12-13"
 title: "pagespeed__lighthouse-viewer"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Pagespeed Insights API JSON to Lighthouse-viewer
