--- a/prometheus__grok--apache2/index.mdx
+++ b/prometheus__grok--apache2/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/prometheus__grok--apache2"
 date:  "2019-10-29"
 title: "prometheus__grok--apache2"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Grok_exporter for Apache2
