--- a/scraper__instamancer/index.mdx
+++ b/scraper__instamancer/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/scraper__instamancer"
 date:  "2020-07-14"
 title: "scraper__instamancer"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 <p align="center">
