--- a/tailwind__variant--on/index.mdx
+++ b/tailwind__variant--on/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/tailwind__variant--on"
 date:  "2021-05-30"
 title: "tailwind__variant--on"
-icon:  "javascript"
+icon:  "JavaScript"
 ---
 
 # Tailwind 'on' variants.
