--- a/typora__notion-theme/index.mdx
+++ b/typora__notion-theme/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/typora__notion-theme"
 date:  "2020-08-10"
 title: "typora__notion-theme"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 ![Notion Screenshot](./notion/Notion.jpg)
