--- a/uploads__londonparkour/index.mdx
+++ b/uploads__londonparkour/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/uploads__londonparkour"
 date:  "2021-04-12"
 title: "uploads__londonparkour"
-icon:  "null"
+icon:  "github"
 ---
 
 404: Not Found
