--- a/visual-planner/index.mdx
+++ b/visual-planner/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/visual-planner"
 date:  "2020-06-21"
 title: "visual-planner"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # visual-planner
