--- a/workflow__puppeteer--demo/index.mdx
+++ b/workflow__puppeteer--demo/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/workflow__puppeteer--demo"
 date:  "2021-08-15"
 title: "workflow__puppeteer--demo"
-icon:  "javascript"
+icon:  "JavaScript"
 ---
 
 # Demo Puppeteer Github Action Script
