--- a/wp-plugin__acf--codemirror/index.mdx
+++ b/wp-plugin__acf--codemirror/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__acf--codemirror"
 date:  "2020-09-29"
 title: "wp-plugin__acf--codemirror"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 404: Not Found
