--- a/wp-plugin__acf--inline-datetime-field/index.mdx
+++ b/wp-plugin__acf--inline-datetime-field/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__acf--inline-datetime-field"
 date:  "2020-09-04"
 title: "wp-plugin__acf--inline-datetime-field"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 ![Screenshot](screenshot.png)
