--- a/wp-plugin__admin--remove-comments/index.mdx
+++ b/wp-plugin__admin--remove-comments/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__admin--remove-comments"
 date:  "2019-10-28"
 title: "wp-plugin__admin--remove-comments"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # wp-plugin__admin--remove-comments
