--- a/wp-plugin__admin-widgets/index.mdx
+++ b/wp-plugin__admin-widgets/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__admin-widgets"
 date:  "2020-08-16"
 title: "wp-plugin__admin-widgets"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Admin Widgets
