--- a/wp-plugin__advanced-forms--replyto/index.mdx
+++ b/wp-plugin__advanced-forms--replyto/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__advanced-forms--replyto"
 date:  "2019-12-20"
 title: "wp-plugin__advanced-forms--replyto"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Advanced Forms Pro - Reply-to header
