--- a/wp-plugin__api-scraper/index.mdx
+++ b/wp-plugin__api-scraper/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__api-scraper"
 date:  "2019-10-28"
 title: "wp-plugin__api-scraper"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Wordpress Generic API Scraper.
