--- a/wp-plugin__auto-menu/index.mdx
+++ b/wp-plugin__auto-menu/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__auto-menu"
 date:  "2019-10-28"
 title: "wp-plugin__auto-menu"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # wp-plugin__auto-menu
