--- a/wp-plugin__cpt--amp/index.mdx
+++ b/wp-plugin__cpt--amp/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__cpt--amp"
 date:  "2021-04-20"
 title: "wp-plugin__cpt--amp"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # AMP
