--- a/wp-plugin__cpt--blog/index.mdx
+++ b/wp-plugin__cpt--blog/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__cpt--blog"
 date:  "2021-02-04"
 title: "wp-plugin__cpt--blog"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Blog
