--- a/wp-plugin__cpt--events/index.mdx
+++ b/wp-plugin__cpt--events/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__cpt--events"
 date:  "2021-03-08"
 title: "wp-plugin__cpt--events"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Event
