--- a/wp-plugin__cpt--support/index.mdx
+++ b/wp-plugin__cpt--support/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__cpt--support"
 date:  "2021-04-23"
 title: "wp-plugin__cpt--support"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # SUPPORT
