--- a/wp-plugin__cpt--syllabus/index.mdx
+++ b/wp-plugin__cpt--syllabus/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__cpt--syllabus"
 date:  "2021-11-19"
 title: "wp-plugin__cpt--syllabus"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Articles
