--- a/wp-plugin__generative-images/index.mdx
+++ b/wp-plugin__generative-images/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__generative-images"
 date:  "2020-03-29"
 title: "wp-plugin__generative-images"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Generative Images for Wordpress posts
