--- a/wp-plugin__memberpress--login-logout/index.mdx
+++ b/wp-plugin__memberpress--login-logout/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__memberpress--login-logout"
 date:  "2022-02-20"
 title: "wp-plugin__memberpress--login-logout"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Simple login / logout button for memberpress
