--- a/wp-plugin__menus--responsive/index.mdx
+++ b/wp-plugin__menus--responsive/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__menus--responsive"
 date:  "2019-11-11"
 title: "wp-plugin__menus--responsive"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Responsive Menus
