--- a/wp-plugin__oauth--GMB/index.mdx
+++ b/wp-plugin__oauth--GMB/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__oauth--GMB"
 date:  "2020-10-04"
 title: "wp-plugin__oauth--GMB"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # OAUTH Google Gooogle-My-Business Implementation Plugin.
