--- a/wp-plugin__oauth--YouTube/index.mdx
+++ b/wp-plugin__oauth--YouTube/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__oauth--YouTube"
 date:  "2020-09-30"
 title: "wp-plugin__oauth--YouTube"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # OAUTH Google YouTube Implementation Plugin.
