--- a/wp-plugin__oauth--gCAL/index.mdx
+++ b/wp-plugin__oauth--gCAL/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__oauth--gCAL"
 date:  "2021-03-06"
 title: "wp-plugin__oauth--gCAL"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # OAUTH Google Google Calendar Implementation Plugin.
