--- a/wp-plugin__oauth-demo/index.mdx
+++ b/wp-plugin__oauth-demo/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__oauth-demo"
 date:  "2020-09-15"
 title: "wp-plugin__oauth-demo"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Wordpress & Google OAuth
