--- a/wp-plugin__page-builder--epic-slider/index.mdx
+++ b/wp-plugin__page-builder--epic-slider/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__page-builder--epic-slider"
 date:  "2021-10-11"
 title: "wp-plugin__page-builder--epic-slider"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Page-Builder Epic-Slider
