--- a/wp-plugin__page-builder--flickity/index.mdx
+++ b/wp-plugin__page-builder--flickity/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__page-builder--flickity"
 date:  "2021-01-11"
 title: "wp-plugin__page-builder--flickity"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Metafizzy Flickity
