--- a/wp-plugin__page-builder--rawcode/index.mdx
+++ b/wp-plugin__page-builder--rawcode/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__page-builder--rawcode"
 date:  "2021-04-12"
 title: "wp-plugin__page-builder--rawcode"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Page Builder - Raw code
