--- a/wp-plugin__page-builder--video-rotator/index.mdx
+++ b/wp-plugin__page-builder--video-rotator/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__page-builder--video-rotator"
 date:  "2021-04-06"
 title: "wp-plugin__page-builder--video-rotator"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 404: Not Found
