--- a/wp-plugin__page-builder--yt-lite/index.mdx
+++ b/wp-plugin__page-builder--yt-lite/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__page-builder--yt-lite"
 date:  "2021-01-20"
 title: "wp-plugin__page-builder--yt-lite"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Page Builder - YT Lite
