--- a/wp-plugin__page-builder/index.mdx
+++ b/wp-plugin__page-builder/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__page-builder"
 date:  "2021-01-11"
 title: "wp-plugin__page-builder"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Page Builder
