--- a/wp-plugin__pipeline--exporter/index.mdx
+++ b/wp-plugin__pipeline--exporter/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__pipeline--exporter"
 date:  "2020-10-06"
 title: "wp-plugin__pipeline--exporter"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Install
