--- a/wp-plugin__pulse--stack/index.mdx
+++ b/wp-plugin__pulse--stack/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__pulse--stack"
 date:  "2020-07-25"
 title: "wp-plugin__pulse--stack"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Pulse Stack
