--- a/wp-plugin__regex-posts/index.mdx
+++ b/wp-plugin__regex-posts/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__regex-posts"
 date:  "2020-02-07"
 title: "wp-plugin__regex-posts"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # REGEXER
