--- a/wp-plugin__sidebar-menu/index.mdx
+++ b/wp-plugin__sidebar-menu/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__sidebar-menu"
 date:  "2022-01-20"
 title: "wp-plugin__sidebar-menu"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Sidebar Menu
