--- a/wp-plugin__taxonomy--extra/index.mdx
+++ b/wp-plugin__taxonomy--extra/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__taxonomy--extra"
 date:  "2021-01-20"
 title: "wp-plugin__taxonomy--extra"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Taxonomy Extra Fields
