--- a/wp-plugin__theme--custom-structure/index.mdx
+++ b/wp-plugin__theme--custom-structure/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__theme--custom-structure"
 date:  "2021-02-04"
 title: "wp-plugin__theme--custom-structure"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 404: Not Found
