--- a/wp-plugin__thumbnail-folders/index.mdx
+++ b/wp-plugin__thumbnail-folders/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__thumbnail-folders"
 date:  "2021-02-11"
 title: "wp-plugin__thumbnail-folders"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 404: Not Found
