--- a/wp-plugin__ytdl/index.mdx
+++ b/wp-plugin__ytdl/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__ytdl"
 date:  "2020-09-20"
 title: "wp-plugin__ytdl"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Youtube Downloader
