--- a/wp-theme__londonparkour--v4/index.mdx
+++ b/wp-theme__londonparkour--v4/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-theme__londonparkour--v4"
 date:  "2019-10-28"
 title: "wp-theme__londonparkour--v4"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # LondonParkour Theme : v4
