--- a/wp-theme__londonparkour--v5/index.mdx
+++ b/wp-theme__londonparkour--v5/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-theme__londonparkour--v5"
 date:  "2021-04-12"
 title: "wp-theme__londonparkour--v5"
-icon:  "shell"
+icon:  "wordpress"
 ---
 
 # LondonParkour v5
