--- a/wp-theme__pulse/index.mdx
+++ b/wp-theme__pulse/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-theme__pulse"
 date:  "2021-09-09"
 title: "wp-theme__pulse"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 404: Not Found
