--- a/wp-theme__syllabus-v1/index.mdx
+++ b/wp-theme__syllabus-v1/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-theme__syllabus-v1"
 date:  "2022-01-18"
 title: "wp-theme__syllabus-v1"
-icon:  "shell"
+icon:  "wordpress"
 ---
 
 # Syllabus v1
