--- a/zurb__newsletter--londonparkour/index.mdx
+++ b/zurb__newsletter--londonparkour/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/zurb__newsletter--londonparkour"
 date:  "2018-10-11"
 title: "zurb__newsletter--londonparkour"
-icon:  "message"
+icon:  "mailchimp"
 ---
 
 # Foundation for Emails Template
