--- a/Obsidian-Monokai/index.mdx
+++ b/Obsidian-Monokai/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/Obsidian-Monokai"
 date:  "2022-06-13"
 title: "Obsidian-Monokai"
-icon:  "css"
+icon:  "css3"
 ---
 
 404: Not Found
