--- a/deploy__EXPORTER/index.mdx
+++ b/deploy__EXPORTER/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/deploy__EXPORTER"
 date:  "2021-08-10"
 title: "deploy__EXPORTER"
-icon:  "null"
+icon:  "github actions"
 ---
 
 # This is a new project for wordpress
