--- a/neofetch/index.mdx
+++ b/neofetch/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/neofetch"
 date:  "2022-06-20"
 title: "neofetch"
-icon:  "shell"
+icon:  "gnubash"
 ---
 
 <h3 align="center"><img src="https://i.imgur.com/ZQI2EYz.png" alt="logo" height="100px"/></h3>
