--- a/obsidian-releases/index.mdx
+++ b/obsidian-releases/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/obsidian-releases"
 date:  "2022-06-13"
 title: "obsidian-releases"
-icon:  "javascript"
+icon:  "JavaScript"
 ---
 
 ## About this repo
