--- a/run__lighthouse/index.mdx
+++ b/run__lighthouse/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/run__lighthouse"
 date:  "2021-09-03"
 title: "run__lighthouse"
-icon:  "html"
+icon:  "lighthouse"
 ---
 
 # Lighthouse Testing
