--- a/scripts__tools/index.mdx
+++ b/scripts__tools/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/scripts__tools"
 date:  "2020-08-12"
 title: "scripts__tools"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Scripts and Tools
