--- a/uploads__labs/index.mdx
+++ b/uploads__labs/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/uploads__labs"
 date:  "2021-06-18"
 title: "uploads__labs"
-icon:  "null"
+icon:  "github"
 ---
 
 404: Not Found
