--- a/workflow__puppeteer--later.com/index.mdx
+++ b/workflow__puppeteer--later.com/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/workflow__puppeteer--later.com"
 date:  "2021-08-17"
 title: "workflow__puppeteer--later.com"
-icon:  "javascript"
+icon:  "JavaScript"
 ---
 
 # Later.com Puppeteer Script
