--- a/wp-plugin__REST--labs/index.mdx
+++ b/wp-plugin__REST--labs/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__REST--labs"
 date:  "2021-03-04"
 title: "wp-plugin__REST--labs"
-icon:  "scss"
+icon:  "wordpress"
 ---
 
 # Labs Stack
