--- a/wp-plugin__acf-options-import-export/index.mdx
+++ b/wp-plugin__acf-options-import-export/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__acf-options-import-export"
 date:  "2020-05-23"
 title: "wp-plugin__acf-options-import-export"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # ACF options importer/exporter
