--- a/wp-plugin__admin-themes/index.mdx
+++ b/wp-plugin__admin-themes/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__admin-themes"
 date:  "2021-01-01"
 title: "wp-plugin__admin-themes"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 404: Not Found
