--- a/wp-plugin__andyp-plugins/index.mdx
+++ b/wp-plugin__andyp-plugins/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__andyp-plugins"
 date:  "2020-12-26"
 title: "wp-plugin__andyp-plugins"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 404: Not Found
