--- a/wp-plugin__cpt--pulse/index.mdx
+++ b/wp-plugin__cpt--pulse/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__cpt--pulse"
 date:  "2021-02-14"
 title: "wp-plugin__cpt--pulse"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Blog
