--- a/wp-plugin__footer/index.mdx
+++ b/wp-plugin__footer/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__footer"
 date:  "2019-10-28"
 title: "wp-plugin__footer"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Footer Selector
