--- a/wp-plugin__gcal-sync/index.mdx
+++ b/wp-plugin__gcal-sync/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__gcal-sync"
 date:  "2021-04-02"
 title: "wp-plugin__gcal-sync"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 404: Not Found
