--- a/wp-plugin__page-builder--hero/index.mdx
+++ b/wp-plugin__page-builder--hero/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__page-builder--hero"
 date:  "2021-04-12"
 title: "wp-plugin__page-builder--hero"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Page Builder - Hero Random
