--- a/wp-plugin__pipeline--processor/index.mdx
+++ b/wp-plugin__pipeline--processor/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__pipeline--processor"
 date:  "2020-08-16"
 title: "wp-plugin__pipeline--processor"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # The Processor
