--- a/wp-plugin__pulse-chips/index.mdx
+++ b/wp-plugin__pulse-chips/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__pulse-chips"
 date:  "2020-07-18"
 title: "wp-plugin__pulse-chips"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 404: Not Found
