--- a/wp-plugin__rest--isometric/index.mdx
+++ b/wp-plugin__rest--isometric/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__rest--isometric"
 date:  "2021-10-26"
 title: "wp-plugin__rest--isometric"
-icon:  "scss"
+icon:  "wordpress"
 ---
 
 # REST Isometric
