--- a/wp-plugin__shortcode--facts/index.mdx
+++ b/wp-plugin__shortcode--facts/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__shortcode--facts"
 date:  "2021-05-29"
 title: "wp-plugin__shortcode--facts"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 404: Not Found
