--- a/wp-plugin__shortcode--modals/index.mdx
+++ b/wp-plugin__shortcode--modals/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__shortcode--modals"
 date:  "2020-05-18"
 title: "wp-plugin__shortcode--modals"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Simple shortcode for modals
