--- a/wp-plugin__shortcode--picture/index.mdx
+++ b/wp-plugin__shortcode--picture/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__shortcode--picture"
 date:  "2021-04-11"
 title: "wp-plugin__shortcode--picture"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 # Page Builder - YT Lite
