--- a/wp-plugin__shortcode--tree/index.mdx
+++ b/wp-plugin__shortcode--tree/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-plugin__shortcode--tree"
 date:  "2021-06-04"
 title: "wp-plugin__shortcode--tree"
-icon:  "php"
+icon:  "wordpress"
 ---
 
 404: Not Found
