--- a/wp-pluging__menu--code-inject/index.mdx
+++ b/wp-pluging__menu--code-inject/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-pluging__menu--code-inject"
 date:  "2021-01-08"
 title: "wp-pluging__menu--code-inject"
-icon:  "message"
+icon:  "wordpress"
 ---
 
 # Menus Extended
