--- a/wp-theme__labs-londonparkour/index.mdx
+++ b/wp-theme__labs-londonparkour/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/wp-theme__labs-londonparkour"
 date:  "2021-06-18"
 title: "wp-theme__labs-londonparkour"
-icon:  "shell"
+icon:  "wordpress"
 ---
 
 404: Not Found
