--- a/gatsby-latest-versions/index.mdx
+++ b/gatsby-latest-versions/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/gatsby-latest-versions"
 date:  "2022-05-18"
 title: "gatsby-latest-versions"
-icon:  "JavaScript"
+icon:  "gatsby"
 ---
 
 <!-- AUTO-GENERATED-CONTENT:START (STARTER) -->
