--- a/IORoot.com/index.mdx
+++ b/IORoot.com/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/IORoot.com"
 date:  "2022-06-12"
 title: "IORoot.com"
-icon:  "JavaScript"
+icon:  "javascript"
 ---
 
 <!-- AUTO-GENERATED-CONTENT:START (STARTER) -->
