--- a/SVGencode/index.mdx
+++ b/SVGencode/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/SVGencode"
 date:  "2022-06-05"
 title: "SVGencode"
-icon:  "JavaScript"
+icon:  "javascript"
 ---
 
 # SVG Encoder
