--- a/macos__colorpicker--palettes/index.mdx
+++ b/macos__colorpicker--palettes/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/macos__colorpicker--palettes"
 date:  "2021-07-18"
 title: "macos__colorpicker--palettes"
-icon:  "macos"
+icon:  "apple"
 ---
 
 # 🌈 Apple CLR Palettes
