--- a/action__puppeteer--media/index.mdx
+++ b/action__puppeteer--media/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/projects/action__puppeteer--media"
 date:  "2021-08-17"
 title: "action__puppeteer--media"
-icon:  "githubaction"
+icon:  "githubactions"
 ---
 
 # Javascript / Puppeteer Github Action
