--- a/IORoot.com/index.mdx
+++ b/IORoot.com/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/IORoot.com"
 slug:  "/projects/IORoot.com"
 date:  "2022-06-12"
 title: "IORoot.com"
-icon:  "javascript"
+icon:  "gatsby"
 ---
 <!-- AUTO-GENERATED-CONTENT:START (STARTER) -->
 <p align="center">
