--- a/IORoot/index.mdx
+++ b/IORoot/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/IORoot"
 slug:  "/projects/IORoot"
 date:  "2020-07-16"
 title: "IORoot"
-icon:  "wordpress"
+icon:  "githubpages"
 ---
 # Howdy! 👋
 ## Activity
