--- a/pagespeed__lighthouse-viewer/index.mdx
+++ b/pagespeed__lighthouse-viewer/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/pagespeed__lighthouse-viewer"
 slug:  "/projects/pagespeed__lighthouse-viewer"
 date:  "2019-12-13"
 title: "pagespeed__lighthouse-viewer"
-icon:  "wordpress"
+icon:  "lighthouse"
 ---
 # Pagespeed Insights API JSON to Lighthouse-viewer
 
