--- a/latestversions/index.mdx
+++ b/latestversions/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/latestversions"
 slug:  "/projects/latestversions"
 date:  "2021-10-28"
 title: "latestversions"
-icon:  "javascript"
+icon:  "githubactions"
 ---
 
 # Latest Versions
