--- a/scripts__tools/index.mdx
+++ b/scripts__tools/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/scripts__tools"
 slug:  "/projects/scripts__tools"
 date:  "2020-08-12"
 title: "scripts__tools"
-icon:  "wordpress"
+icon:  "gnubash"
 ---
 # Scripts and Tools
 
