--- a/typora__notion-theme/index.mdx
+++ b/typora__notion-theme/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/typora__notion-theme"
 slug:  "/projects/typora__notion-theme"
 date:  "2020-08-10"
 title: "typora__notion-theme"
-icon:  "wordpress"
+icon:  "notion"
 ---
 ![Notion Screenshot](./notion/Notion.jpg)
 ![Notion Screenshot](./notion/NotionPattern.jpg)
