--- a/github__actions--WP-workflow-example/index.mdx
+++ b/github__actions--WP-workflow-example/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/github__actions--WP-workflow-example"
 slug:  "/projects/github__actions--WP-workflow-example"
 date:  "2020-11-30"
 title: "github__actions--WP-workflow-example"
-icon:  "wordpress"
+icon:  "githubactions"
 ---
 # WP-Github-Action-Workflow
 
