--- a/workflow__puppeteer--later.com/index.mdx
+++ b/workflow__puppeteer--later.com/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/workflow__puppeteer--later.com"
 slug:  "/projects/workflow__puppeteer--later.com"
 date:  "2021-08-17"
 title: "workflow__puppeteer--later.com"
-icon:  "githubaction"
+icon:  "githubactions"
 ---
 # Later.com Puppeteer Script
 
