--- a/SVGencode/index.mdx
+++ b/SVGencode/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/SVGencode"
 slug:  "/projects/SVGencode"
 date:  "2022-06-05"
 title: "SVGencode"
-icon:  "javascript"
+icon:  "gatsby"
 ---
 # SVG Encoder
 
