--- a/Obsidian-Monokai/index.mdx
+++ b/Obsidian-Monokai/index.mdx
@@ -3,6 +3,6 @@ repo: "https://github.com/IORoot/Obsidian-Monokai"
 slug:  "/projects/Obsidian-Monokai"
 date:  "2022-06-13"
 title: "Obsidian-Monokai"
-icon:  "css3"
+icon:  "obsidian"
 ---
 404: Not Found
