--- a/obsidian-releases/index.mdx
+++ b/obsidian-releases/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/obsidian-releases"
 slug:  "/projects/obsidian-releases"
 date:  "2022-06-13"
 title: "obsidian-releases"
-icon:  "css3"
+icon:  "obsidian"
 ---
 ## About this repo
 
