--- a/macos__colorpicker--app/index.mdx
+++ b/macos__colorpicker--app/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/macos__colorpicker--app"
 slug:  "/projects/macos__colorpicker--app"
 date:  "2021-10-28"
-title: "macos__colorpicker--app"
+title: "MacOS Color-Picker Shortcut"
 icon:  "apple"
 ---
 # 🌈 MacOS Colorpicker App Shortcut
