--- a/macos__colorpicker--palettes/index.mdx
+++ b/macos__colorpicker--palettes/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/macos__colorpicker--palettes"
 slug:  "/projects/macos__colorpicker--palettes"
 date:  "2021-07-18"
-title: "macos__colorpicker--palettes"
+title: "Popular .CLR Palettes"
 icon:  "apple"
 ---
 # 🌈 Apple CLR Palettes
