--- a/macos__json2clr--convert/index.mdx
+++ b/macos__json2clr--convert/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/macos__json2clr--convert"
 slug:  "/projects/macos__json2clr--convert"
 date:  "2022-06-23"
-title: "MacOS .JSON to .CLR Color File Converter"
+title: ".JSON to .CLR File Converter"
 icon:  "apple"
 ---
 # 🌈 MacOS .JSON to .CLR Color Palette Converter 
