--- a/IORoot/index.mdx
+++ b/IORoot/index.mdx
@@ -1,6 +1,6 @@
 ---
 repo: "https://github.com/IORoot/IORoot"
-slug:  "/projects/IORoot"
+slug:  "/projects/ioroot"
 date:  "2020-07-16"
 title: "IORoot"
 icon:  "githubpages"
