--- a/SVGencode/index.mdx
+++ b/SVGencode/index.mdx
@@ -1,6 +1,6 @@
 ---
 repo: "https://github.com/IORoot/SVGencode"
-slug:  "/projects/SVGencode"
+slug:  "/projects/svgencode"
 date:  "2022-06-05"
 title: "SVGencode"
 icon:  "gatsby"
