--- a/SVGencode/index.mdx
+++ b/SVGencode/index.mdx
@@ -7,7 +7,7 @@ icon:  "gatsby"
 ---
 # SVG Encoder
 
-[SVGEncode.com](SVGEncode.com)
+[SVGEncode.com](https://SVGEncode.com)
 
 Convert your SVG to common encodings for CSS & HTML.
 
