--- a/latestversions-scraper/index.mdx
+++ b/latestversions-scraper/index.mdx
@@ -2,11 +2,9 @@
 repo: "https://github.com/IORoot/latestversions-scraper"
 slug:  "/projects/latestversions-scraper"
 date:  "2021-10-28"
-title: "latestversions-scraper"
-icon:  "javascript"
+title: "LatestVersions Scraper"
+icon:  "Gatsby"
 ---
-
-
 
 # Latest Versions Scraper
 
