--- a/latestversions-website/index.mdx
+++ b/latestversions-website/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/latestversions-website"
 slug:  "/projects/latestversions-website"
 date:  "2022-05-18"
-title: "latestversions-website"
-icon:  "javascript"
+title: "LatestVersions Website"
+icon:  "Gatsby"
 ---
 
 
