--- a/latestversions-scraper/index.mdx
+++ b/latestversions-scraper/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/latestversions-scraper"
 slug:  "/projects/latestversions-scraper"
 date:  "2021-10-28"
 title: "LatestVersions Scraper"
-icon:  "Gatsby"
+icon:  "gatsby"
 ---
 
 # Latest Versions Scraper
