--- a/latestversions-website/index.mdx
+++ b/latestversions-website/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/latestversions-website"
 slug:  "/projects/latestversions-website"
 date:  "2022-05-18"
 title: "LatestVersions Website"
-icon:  "Gatsby"
+icon:  "gatsby"
 ---
 
 
