--- a/wp-plugin__REST--labs/index.mdx
+++ b/wp-plugin__REST--labs/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__REST--labs"
 slug:  "/projects/wp-plugin__rest--labs"
 date:  "2021-03-04"
 title: "wp-plugin__REST--labs"
-icon:  "scss"
+icon:  "wordpress"
 desc:  "REST Interface to Labs.londonparkour.com"
 ---
 
