--- a/wp-plugin__acf--inline-datetime-field/index.mdx
+++ b/wp-plugin__acf--inline-datetime-field/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__acf--inline-datetime-field"
 slug:  "/projects/wp-plugin__acf--inline-datetime-field"
 date:  "2020-09-04"
 title: "wp-plugin__acf--inline-datetime-field"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Renders the datetime picker inline rather than a popup."
 ---
 
