--- a/wp-plugin__acf-options-import-export/index.mdx
+++ b/wp-plugin__acf-options-import-export/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__acf-options-import-export"
 slug:  "/projects/wp-plugin__acf-options-import-export"
 date:  "2020-05-23"
 title: "wp-plugin__acf-options-import-export"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Allows you to import and export ACF options directly from the database. Caution, this is very dangerous!"
 ---
 
