--- a/wp-plugin__auto-menu/index.mdx
+++ b/wp-plugin__auto-menu/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__auto-menu"
 slug:  "/projects/wp-plugin__auto-menu"
 date:  "2019-10-28"
 title: "wp-plugin__auto-menu"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Adds posts of a selected category to a menu automatically."
 ---
 
