--- a/wp-plugin__cpt--blog/index.mdx
+++ b/wp-plugin__cpt--blog/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__cpt--blog"
 slug:  "/projects/wp-plugin__cpt--blog"
 date:  "2021-02-04"
 title: "wp-plugin__cpt--blog"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Custom Post Type - Blog"
 ---
 
