--- a/wp-plugin__cpt--events/index.mdx
+++ b/wp-plugin__cpt--events/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__cpt--events"
 slug:  "/projects/wp-plugin__cpt--events"
 date:  "2021-03-08"
 title: "wp-plugin__cpt--events"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Events CPT to add synced gCal events to."
 ---
 
