--- a/wp-plugin__cpt--pulse/index.mdx
+++ b/wp-plugin__cpt--pulse/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__cpt--pulse"
 slug:  "/projects/wp-plugin__cpt--pulse"
 date:  "2021-02-14"
 title: "wp-plugin__cpt--pulse"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Custom Post Type for Pulse"
 ---
 
