--- a/wp-plugin__cpt--syllabus/index.mdx
+++ b/wp-plugin__cpt--syllabus/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__cpt--syllabus"
 slug:  "/projects/wp-plugin__cpt--syllabus"
 date:  "2021-11-19"
 title: "wp-plugin__cpt--syllabus"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Custom Post-Type for the syllabus pages."
 ---
 
