--- a/wp-plugin__footer/index.mdx
+++ b/wp-plugin__footer/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__footer"
 slug:  "/projects/wp-plugin__footer"
 date:  "2019-10-28"
 title: "wp-plugin__footer"
-icon:  "php"
+icon:  "wordpress"
 desc:  "ACF options panel to allow you to select a specific page for your footer."
 ---
 
