--- a/wp-plugin__generative-images/index.mdx
+++ b/wp-plugin__generative-images/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__generative-images"
 slug:  "/projects/wp-plugin__generative-images"
 date:  "2020-03-29"
 title: "wp-plugin__generative-images"
-icon:  "shell"
+icon:  "wordpress"
 desc:  "Generate SVG images based on featured images."
 ---
 
