--- a/wp-plugin__oauth--GMB/index.mdx
+++ b/wp-plugin__oauth--GMB/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__oauth--GMB"
 slug:  "/projects/wp-plugin__oauth--gmb"
 date:  "2020-10-04"
 title: "wp-plugin__oauth--GMB"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Google-My-Business Plugin implementation "
 ---
 
