--- a/wp-plugin__oauth--YouTube/index.mdx
+++ b/wp-plugin__oauth--YouTube/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__oauth--YouTube"
 slug:  "/projects/wp-plugin__oauth--youtube"
 date:  "2020-09-30"
 title: "wp-plugin__oauth--YouTube"
-icon:  "php"
+icon:  "wordpress"
 desc:  "oAuth implementation to separate away from Universal Exporter Plugin"
 ---
 
