--- a/wp-plugin__oauth--gCAL/index.mdx
+++ b/wp-plugin__oauth--gCAL/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__oauth--gCAL"
 slug:  "/projects/wp-plugin__oauth--gcal"
 date:  "2021-03-06"
 title: "wp-plugin__oauth--gCAL"
-icon:  "php"
+icon:  "wordpress"
 desc:  "ACF oAuth for google Calendar"
 ---
 
