--- a/wp-plugin__oauth-demo/index.mdx
+++ b/wp-plugin__oauth-demo/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__oauth-demo"
 slug:  "/projects/wp-plugin__oauth-demo"
 date:  "2020-09-15"
 title: "wp-plugin__oauth-demo"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Demo of how to get google OAUTH working in wordpress."
 ---
 
