--- a/wp-plugin__page-builder--epic-slider/index.mdx
+++ b/wp-plugin__page-builder--epic-slider/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__page-builder--epic-slider"
 slug:  "/projects/wp-plugin__page-builder--epic-slider"
 date:  "2021-10-11"
 title: "wp-plugin__page-builder--epic-slider"
-icon:  "php"
+icon:  "wordpress"
 desc:  "EpicSlider for Wordpress PageBuilder"
 ---
 
