--- a/wp-plugin__page-builder--flickity/index.mdx
+++ b/wp-plugin__page-builder--flickity/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__page-builder--flickity"
 slug:  "/projects/wp-plugin__page-builder--flickity"
 date:  "2021-01-11"
 title: "wp-plugin__page-builder--flickity"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Metafizzy Flickity slider module for page builder."
 ---
 
