--- a/wp-plugin__page-builder--isotope/index.mdx
+++ b/wp-plugin__page-builder--isotope/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__page-builder--isotope"
 slug:  "/projects/wp-plugin__page-builder--isotope"
 date:  "2021-01-11"
 title: "wp-plugin__page-builder--isotope"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Metafizzy Isotope grid module for page builder"
 ---
 
