--- a/wp-plugin__page-builder--rawcode/index.mdx
+++ b/wp-plugin__page-builder--rawcode/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__page-builder--rawcode"
 slug:  "/projects/wp-plugin__page-builder--rawcode"
 date:  "2021-04-12"
 title: "wp-plugin__page-builder--rawcode"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Page builder rawcode"
 ---
 
