--- a/wp-plugin__page-builder--yt-lite/index.mdx
+++ b/wp-plugin__page-builder--yt-lite/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__page-builder--yt-lite"
 slug:  "/projects/wp-plugin__page-builder--yt-lite"
 date:  "2021-01-20"
 title: "wp-plugin__page-builder--yt-lite"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Adds YouTube Lite into the Page Builder"
 ---
 
