--- a/wp-plugin__page-builder/index.mdx
+++ b/wp-plugin__page-builder/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__page-builder"
 slug:  "/projects/wp-plugin__page-builder"
 date:  "2021-01-11"
 title: "wp-plugin__page-builder"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Custom Page Builder to replace WPBakery"
 ---
 
