--- a/wp-plugin__pipeline--exporter/index.mdx
+++ b/wp-plugin__pipeline--exporter/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__pipeline--exporter"
 slug:  "/projects/wp-plugin__pipeline--exporter"
 date:  "2020-10-06"
 title: "wp-plugin__pipeline--exporter"
-icon:  "shell"
+icon:  "wordpress"
 desc:  "Pipeline Project - Exporter"
 ---
 
