--- a/wp-plugin__pulse--stack/index.mdx
+++ b/wp-plugin__pulse--stack/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__pulse--stack"
 slug:  "/projects/wp-plugin__pulse--stack"
 date:  "2020-07-25"
 title: "wp-plugin__pulse--stack"
-icon:  "scss"
+icon:  "wordpress"
 desc:  "Create an animated "Stack" of posts for homepage. Uses anime.js"
 ---
 
