--- a/wp-plugin__regex-posts/index.mdx
+++ b/wp-plugin__regex-posts/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__regex-posts"
 slug:  "/projects/wp-plugin__regex-posts"
 date:  "2020-02-07"
 title: "wp-plugin__regex-posts"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Apply a regex to any post type and field. Test, Single ID or Bulk all posts of type."
 ---
 
