--- a/wp-plugin__rest--isometric/index.mdx
+++ b/wp-plugin__rest--isometric/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__rest--isometric"
 slug:  "/projects/wp-plugin__rest--isometric"
 date:  "2021-10-26"
 title: "wp-plugin__rest--isometric"
-icon:  "scss"
+icon:  "wordpress"
 desc:  "Generic REST request with a view output of images in an isometic format."
 ---
 
