--- a/wp-plugin__shortcode--fetch/index.mdx
+++ b/wp-plugin__shortcode--fetch/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__shortcode--fetch"
 slug:  "/projects/wp-plugin__shortcode--fetch"
 date:  "2021-05-29"
 title: "wp-plugin__shortcode--fetch"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Allows you to obtain posts from wordpress and supply a template to apply to all retrieved results."
 ---
 
