--- a/wp-plugin__shortcode--modals/index.mdx
+++ b/wp-plugin__shortcode--modals/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__shortcode--modals"
 slug:  "/projects/wp-plugin__shortcode--modals"
 date:  "2020-05-18"
 title: "wp-plugin__shortcode--modals"
-icon:  "scss"
+icon:  "wordpress"
 desc:  "Creates simple CSS-Only modals"
 ---
 
