--- a/wp-plugin__shortcode--picture/index.mdx
+++ b/wp-plugin__shortcode--picture/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__shortcode--picture"
 slug:  "/projects/wp-plugin__shortcode--picture"
 date:  "2021-04-11"
 title: "wp-plugin__shortcode--picture"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Shortcode for creating a responsive picture tag for images."
 ---
 
