--- a/wp-plugin__shortcode--random-image-url/index.mdx
+++ b/wp-plugin__shortcode--random-image-url/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__shortcode--random-image-url"
 slug:  "/projects/wp-plugin__shortcode--random-image-url"
 date:  "2021-05-29"
 title: "wp-plugin__shortcode--random-image-url"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Obtain a random image URL based off a supplied list of image IDs"
 ---
 
