--- a/wp-plugin__sidebar-menu/index.mdx
+++ b/wp-plugin__sidebar-menu/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__sidebar-menu"
 slug:  "/projects/wp-plugin__sidebar-menu"
 date:  "2022-01-20"
 title: "wp-plugin__sidebar-menu"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Wordpress sidebar menu from taxonomy"
 ---
 
