--- a/wp-plugin__stripe-payments/index.mdx
+++ b/wp-plugin__stripe-payments/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__stripe-payments"
 slug:  "/projects/wp-plugin__stripe-payments"
 date:  "2021-04-06"
 title: "wp-plugin__stripe-payments"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Stripe payment customisations"
 ---
 
