--- a/wp-plugin__ytdl/index.mdx
+++ b/wp-plugin__ytdl/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__ytdl"
 slug:  "/projects/wp-plugin__ytdl"
 date:  "2020-09-20"
 title: "wp-plugin__ytdl"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Youtube downloader for WordPress."
 ---
 
