--- a/wp-pluging__menu--code-inject/index.mdx
+++ b/wp-pluging__menu--code-inject/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-pluging__menu--code-inject"
 slug:  "/projects/wp-pluging__menu--code-inject"
 date:  "2021-01-08"
 title: "wp-pluging__menu--code-inject"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Inject any HTML code into the wordpress menu"
 ---
 
