--- a/wp-plugin__acf--codemirror/index.mdx
+++ b/wp-plugin__acf--codemirror/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__acf--codemirror"
 slug:  "/projects/wp-plugin__acf--codemirror"
 date:  "2020-09-29"
 title: "wp-plugin__acf--codemirror"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Embed codemirror textarea fields for ACF"
 ---
 
