--- a/wp-plugin__admin--remove-comments/index.mdx
+++ b/wp-plugin__admin--remove-comments/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__admin--remove-comments"
 slug:  "/projects/wp-plugin__admin--remove-comments"
 date:  "2019-10-28"
 title: "wp-plugin__admin--remove-comments"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Removes the Wordpress 'Comments' menu."
 ---
 
