--- a/wp-plugin__admin-themes/index.mdx
+++ b/wp-plugin__admin-themes/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__admin-themes"
 slug:  "/projects/wp-plugin__admin-themes"
 date:  "2021-01-01"
 title: "wp-plugin__admin-themes"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Switch themes depending on website"
 ---
 
