--- a/wp-plugin__admin-widgets/index.mdx
+++ b/wp-plugin__admin-widgets/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__admin-widgets"
 slug:  "/projects/wp-plugin__admin-widgets"
 date:  "2020-08-16"
 title: "wp-plugin__admin-widgets"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Create admin widgets for the wordpress dashboard. Enables you to embed any code (including iframes) for Google Data studio embeds."
 ---
 
