--- a/wp-plugin__advanced-forms--replyto/index.mdx
+++ b/wp-plugin__advanced-forms--replyto/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__advanced-forms--replyto"
 slug:  "/projects/wp-plugin__advanced-forms--replyto"
 date:  "2019-12-20"
 title: "wp-plugin__advanced-forms--replyto"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Add a 'reply-to' header into the advanced-forms (hookturn.io) plugin."
 ---
 
