--- a/wp-plugin__andyp-plugins/index.mdx
+++ b/wp-plugin__andyp-plugins/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__andyp-plugins"
 slug:  "/projects/wp-plugin__andyp-plugins"
 date:  "2020-12-26"
 title: "wp-plugin__andyp-plugins"
-icon:  "php"
+icon:  "wordpress"
 desc:  "AndyP Plugin Manager"
 ---
 
