--- a/wp-plugin__cpt--amp/index.mdx
+++ b/wp-plugin__cpt--amp/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__cpt--amp"
 slug:  "/projects/wp-plugin__cpt--amp"
 date:  "2021-04-20"
 title: "wp-plugin__cpt--amp"
-icon:  "php"
+icon:  "wordpress"
 desc:  "AMP Pages"
 ---
 
