--- a/wp-plugin__cpt--support/index.mdx
+++ b/wp-plugin__cpt--support/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__cpt--support"
 slug:  "/projects/wp-plugin__cpt--support"
 date:  "2021-04-23"
 title: "wp-plugin__cpt--support"
-icon:  "php"
+icon:  "wordpress"
 desc:  "CPT Support"
 ---
 
