--- a/wp-plugin__cpt--tutorial/index.mdx
+++ b/wp-plugin__cpt--tutorial/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__cpt--tutorial"
 slug:  "/projects/wp-plugin__cpt--tutorial"
 date:  "2021-02-04"
 title: "wp-plugin__cpt--tutorial"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Custom Post Type - Tutorials"
 ---
 
