--- a/wp-plugin__gcal-sync/index.mdx
+++ b/wp-plugin__gcal-sync/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__gcal-sync"
 slug:  "/projects/wp-plugin__gcal-sync"
 date:  "2021-04-02"
 title: "wp-plugin__gcal-sync"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Google Calendar to Wordpress sync"
 ---
 
