--- a/wp-plugin__memberpress--login-logout/index.mdx
+++ b/wp-plugin__memberpress--login-logout/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__memberpress--login-logout"
 slug:  "/projects/wp-plugin__memberpress--login-logout"
 date:  "2022-02-20"
 title: "wp-plugin__memberpress--login-logout"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Simple button for logging in and logging out of the wordpress site."
 ---
 
