--- a/wp-plugin__page-builder--hero/index.mdx
+++ b/wp-plugin__page-builder--hero/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__page-builder--hero"
 slug:  "/projects/wp-plugin__page-builder--hero"
 date:  "2021-04-12"
 title: "wp-plugin__page-builder--hero"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Random Hero generator for page builder"
 ---
 
