--- a/wp-plugin__page-builder--video-rotator/index.mdx
+++ b/wp-plugin__page-builder--video-rotator/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__page-builder--video-rotator"
 slug:  "/projects/wp-plugin__page-builder--video-rotator"
 date:  "2021-04-06"
 title: "wp-plugin__page-builder--video-rotator"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Page builder addon for video rotator"
 ---
 
