--- a/wp-plugin__pipeline--processor/index.mdx
+++ b/wp-plugin__pipeline--processor/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__pipeline--processor"
 slug:  "/projects/wp-plugin__pipeline--processor"
 date:  "2020-08-16"
 title: "wp-plugin__pipeline--processor"
-icon:  "shell"
+icon:  "wordpress"
 desc:  "Pipeline Processor to combine records. Part of the Pipeline Project"
 ---
 
