--- a/wp-plugin__shortcode--breadcrumbs/index.mdx
+++ b/wp-plugin__shortcode--breadcrumbs/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__shortcode--breadcrumbs"
 slug:  "/projects/wp-plugin__shortcode--breadcrumbs"
 date:  "2021-05-29"
 title: "wp-plugin__shortcode--breadcrumbs"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Adds breadcrumbs with CSS Accordion drop-downs."
 ---
 
