--- a/wp-plugin__shortcode--tree/index.mdx
+++ b/wp-plugin__shortcode--tree/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__shortcode--tree"
 slug:  "/projects/wp-plugin__shortcode--tree"
 date:  "2021-06-04"
 title: "wp-plugin__shortcode--tree"
-icon:  "php"
+icon:  "wordpress"
 desc:  "ParkourLabs - Builds a 3-level hierarchical structure based off categories and posts."
 ---
 
