--- a/wp-plugin__taxonomy--extra/index.mdx
+++ b/wp-plugin__taxonomy--extra/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__taxonomy--extra"
 slug:  "/projects/wp-plugin__taxonomy--extra"
 date:  "2021-01-20"
 title: "wp-plugin__taxonomy--extra"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Extra ACF fields for taxonomies"
 ---
 
