--- a/wp-plugin__theme--custom-structure/index.mdx
+++ b/wp-plugin__theme--custom-structure/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__theme--custom-structure"
 slug:  "/projects/wp-plugin__theme--custom-structure"
 date:  "2021-02-04"
 title: "wp-plugin__theme--custom-structure"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Custom Theme Structuring for Wordpress"
 ---
 
