--- a/wp-plugin__thumbnail-folders/index.mdx
+++ b/wp-plugin__thumbnail-folders/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__thumbnail-folders"
 slug:  "/projects/wp-plugin__thumbnail-folders"
 date:  "2021-02-11"
 title: "wp-plugin__thumbnail-folders"
-icon:  "php"
+icon:  "wordpress"
 desc:  "Creates subdirectories in the uploads folder for each thumbnail size"
 ---
 
