--- a/wp-theme__labs-londonparkour/index.mdx
+++ b/wp-theme__labs-londonparkour/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-theme__labs-londonparkour"
 slug:  "/projects/wp-theme__labs-londonparkour"
 date:  "2021-06-18"
 title: "wp-theme__labs-londonparkour"
-icon:  "shell"
+icon:  "digitalocean"
 desc:  "The LABS website theme. Labs.londonparkour.com"
 ---
 
