--- a/wp-theme__syllabus-v1/index.mdx
+++ b/wp-theme__syllabus-v1/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-theme__syllabus-v1"
 slug:  "/projects/wp-theme__syllabus-v1"
 date:  "2022-01-18"
 title: "wp-theme__syllabus-v1"
-icon:  "shell"
+icon:  "digitalocean"
 desc:  "Syllabus website theme"
 ---
 
