--- a/wp-plugin__pulse--stack/index.mdx
+++ b/wp-plugin__pulse--stack/index.mdx
@@ -4,7 +4,7 @@ slug:  "/projects/wp-plugin__pulse--stack"
 date:  "2020-07-25"
 title: "wp-plugin__pulse--stack"
 icon:  "wordpress"
-desc:  "Create an animated "Stack" of posts for homepage. Uses anime.js"
+desc:  "Create an animated Stack of posts for homepage. Uses anime.js"
 ---
 
 
