--- a/wp-plugin__pulse-chips/index.mdx
+++ b/wp-plugin__pulse-chips/index.mdx
@@ -4,7 +4,7 @@ slug:  "/projects/wp-plugin__pulse-chips"
 date:  "2020-07-18"
 title: "wp-plugin__pulse-chips"
 icon:  "wordpress"
-desc:  ""Chips" shortcode for the parkourpulse pages."
+desc:  "Chips shortcode for the parkourpulse pages."
 ---
 
 
