--- a/IORoot-Website/index.mdx
+++ b/IORoot-Website/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/IORoot-Website"
 slug:  "/projects/ioroot-website"
 date:  "2022-06-12"
 title: "IORoot-Website"
-icon:  "javascript"
+icon:  "gatsby"
 desc:  "Gatsby Website for IORoot.com"
 ---
 
