--- a/SVGencode/index.mdx
+++ b/SVGencode/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/SVGencode"
 slug:  "/projects/svgencode"
 date:  "2022-06-05"
 title: "SVGencode"
-icon:  "javascript"
+icon:  "gatsby"
 desc:  "A simple tool to convert an SVG into different formats, ready for use in CSS and HTML."
 ---
 
