--- a/deploy__EXPORTER/index.mdx
+++ b/deploy__EXPORTER/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/deploy__EXPORTER"
 slug:  "/projects/deploy__exporter"
 date:  "2021-08-10"
 title: "deploy__EXPORTER"
-icon:  "github"
+icon:  "githubactions"
 desc:  "Exporter Project for LondonParkour"
 ---
 
