--- a/deploy__PULSE/index.mdx
+++ b/deploy__PULSE/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/deploy__PULSE"
 slug:  "/projects/deploy__pulse"
 date:  "2021-08-23"
 title: "deploy__PULSE"
-icon:  "shell"
+icon:  "githubactions"
 desc:  "PULSE website deploy through CI"
 ---
 
