--- a/deploy__STAGING/index.mdx
+++ b/deploy__STAGING/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/deploy__STAGING"
 slug:  "/projects/deploy__staging"
 date:  "2021-04-07"
 title: "deploy__STAGING"
-icon:  "shell"
+icon:  "githubactions"
 desc:  "LondonParkour Staging wp-content, theme, plugins."
 ---
 
