--- a/github__action--scrapesite-netlify/index.mdx
+++ b/github__action--scrapesite-netlify/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/github__action--scrapesite-netlify"
 slug:  "/projects/github__action--scrapesite-netlify"
 date:  "2022-06-24"
 title: "github__action--scrapesite-netlify"
-icon:  "github"
+icon:  "githubactions"
 desc:  "Github Action to scrape a website, make a static version and push to netlify."
 ---
 
