--- a/github__pages--Lighthouse-Results/index.mdx
+++ b/github__pages--Lighthouse-Results/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/github__pages--Lighthouse-Results"
 slug:  "/projects/github__pages--lighthouse-results"
 date:  "2021-04-26"
 title: "github__pages--Lighthouse-Results"
-icon:  "html"
+icon:  "githubpages"
 desc:  "Send to Netlify, from the testing github-action on STAGING."
 ---
 
