--- a/macos__colorpicker--app/index.mdx
+++ b/macos__colorpicker--app/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/macos__colorpicker--app"
 slug:  "/projects/macos__colorpicker--app"
 date:  "2021-07-18"
 title: "macos__colorpicker--app"
-icon:  "rich text format"
+icon:  "apple"
 desc:  "🌈 Apple MacOS Colorpicker Panel shortcut"
 ---
 
