--- a/run__lighthouse/index.mdx
+++ b/run__lighthouse/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/run__lighthouse"
 slug:  "/projects/run__lighthouse"
 date:  "2021-09-03"
 title: "run__lighthouse"
-icon:  "html"
+icon:  "grafana"
 desc:  "Runs Lighthouse against URLs - Saves to server."
 ---
 
