--- a/zurb__newsletter--londonparkour/index.mdx
+++ b/zurb__newsletter--londonparkour/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/zurb__newsletter--londonparkour"
 slug:  "/projects/zurb__newsletter--londonparkour"
 date:  "2018-10-11"
 title: "zurb__newsletter--londonparkour"
-icon:  "javascript"
+icon:  "gmail"
 desc:  "Zurb Framework Newsletter creator."
 ---
 
