--- a/archive__dead-projects/index.mdx
+++ b/archive__dead-projects/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/archive__dead-projects"
 slug:  "/projects/archive__dead-projects"
 date:  "2021-06-22"
 title: "archive__dead-projects"
-icon:  "vue"
+icon:  "github"
 desc:  "This is where all the repos, code and projects I've written over the years that I no longer use lives."
 ---
 
