--- a/deploy__LABS/index.mdx
+++ b/deploy__LABS/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/deploy__LABS"
 slug:  "/projects/deploy__labs"
 date:  "2021-06-16"
 title: "deploy__LABS"
-icon:  "shell"
+icon:  "githubactions"
 desc:  "labs.londonparkour.com deployment"
 ---
 
