--- a/macos__json2clr--convert/index.mdx
+++ b/macos__json2clr--convert/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/macos__json2clr--convert"
 slug:  "/projects/macos__json2clr--convert"
 date:  "2021-07-18"
 title: "macos__json2clr--convert"
-icon:  "rich text format"
+icon:  "apple"
 desc:  "🌈 Colour Palette .JSON to Apple .CLR converter."
 ---
 
