--- a/obsidian-releases/index.mdx
+++ b/obsidian-releases/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/obsidian-releases"
 slug:  "/projects/obsidian-releases"
 date:  "2022-06-13"
 title: "obsidian-releases"
-icon:  "javascript"
+icon:  "obsidian"
 desc:  "Community plugins list, theme list, and releases of Obsidian."
 ---
 
