--- a/pagespeed__lighthouse-viewer/index.mdx
+++ b/pagespeed__lighthouse-viewer/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/pagespeed__lighthouse-viewer"
 slug:  "/projects/pagespeed__lighthouse-viewer"
 date:  "2019-12-13"
 title: "pagespeed__lighthouse-viewer"
-icon:  "javascript"
+icon:  "lighthouse"
 desc:  "Custom Lighthouse-viewer to read a Pagespeed Insights API JSON response file specified on URL path"
 ---
 
