--- a/uploads__londonparkour/index.mdx
+++ b/uploads__londonparkour/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/uploads__londonparkour"
 slug:  "/projects/uploads__londonparkour"
 date:  "2021-04-12"
 title: "uploads__londonparkour"
-icon:  "github"
+icon:  "githubactions"
 desc:  "All the londonparkour.com image uploads so we can use CI"
 ---
 
